[gd_scene load_steps=21 format=3 uid="uid://iwafti1d83h1"]

[ext_resource type="Script" path="res://ScratchPad/QuestMenu/QuestMenu.gd" id="1_41upj"]
[ext_resource type="Theme" uid="uid://q8fchd6stpns" path="res://UIObjects/Themes/CyberTheme.tres" id="1_qqyti"]
[ext_resource type="FontFile" uid="uid://cfesmr0va1fab" path="res://UIObjects/Assets/Fonts/VCR_OSD_MONO.ttf" id="2_8jnmm"]
[ext_resource type="PackedScene" uid="uid://c1pk7r27sdp4l" path="res://ScratchPad/QuestMenu/QuestStepQuestMenuControl.tscn" id="2_t3s55"]
[ext_resource type="PackedScene" uid="uid://bs750yarq2150" path="res://UIObjects/PlayerHUD/TabStatusMenu/QuestStepUIEntry.tscn" id="3_21qh0"]
[ext_resource type="PackedScene" uid="uid://bcdb0apm4qws3" path="res://ScratchPad/QuestMenu/QuestItemRewardControl.tscn" id="3_vcpyr"]
[ext_resource type="Texture2D" uid="uid://cvufiwjceeqlh" path="res://Content/Demo/Assets/Items/Consumables/TomeOfExperience/TomeOfExperienceInventoryImage.png" id="4_miqe6"]
[ext_resource type="Texture2D" uid="uid://cnf63ko8067n8" path="res://Content/Demo/Assets/Items/HealthPotion/HealthPotionInventoryImage.png" id="5_sqikf"]
[ext_resource type="Texture2D" uid="uid://c1lcmtds3namj" path="res://Content/Demo/Assets/Weapons/TrenchSweeper/TrenchSweeperInventoryImage.png" id="6_7e438"]
[ext_resource type="Texture2D" uid="uid://b7o8f8tocmn8c" path="res://Content/Default/Assets/Scrip/ScripInventoryImage.png" id="7_23sdu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mmric"]
bg_color = Color(0, 0, 0, 1)
border_width_right = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bw5gx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cev82"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e7glo"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Gradient" id="Gradient_ps8b7"]
offsets = PackedFloat32Array(0, 0.995169)
colors = PackedColorArray(0.2546, 0.39999, 0.67, 0.819608, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_coggc"]
gradient = SubResource("Gradient_ps8b7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_shh2r"]
texture = SubResource("GradientTexture1D_coggc")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0kg7u"]
bg_color = Color(0.468128, 0.468128, 0.468128, 1)
border_width_left = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pf4kq"]
bg_color = Color(0.114897, 0.114897, 0.114897, 1)
border_width_left = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kq4wg"]
bg_color = Color(0.393086, 0.393085, 0.393085, 1)
border_width_left = 4
border_width_bottom = 4

[node name="QuestMenu" type="Control"]
custom_minimum_size = Vector2(1600, 800)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -700.0
offset_top = -400.0
offset_right = 700.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_41upj")
quest_step_control = ExtResource("2_t3s55")
quest_reward_item_control = ExtResource("3_vcpyr")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_qqyti")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="QuestListContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mmric")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/QuestListContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 12

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/QuestListContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="QuestListLabel" type="Label" parent="PanelContainer/HBoxContainer/QuestListContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quest List"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/HBoxContainer/QuestListContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="QuestListControl" type="ItemList" parent="PanelContainer/HBoxContainer/QuestListContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_8jnmm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_bw5gx")
theme_override_styles/panel = SubResource("StyleBoxEmpty_cev82")
auto_height = true
item_count = 3
item_0/text = "My Quest"
item_1/text = "My Other Crazy Quest"
item_2/text = "[color=red]My Quest[/color]"

[node name="QuestDetailsContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_e7glo")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/QuestDetailsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="QuestNameControl" type="Control" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="QuestNameLabel" type="Label" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestNameControl"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -11.5
offset_right = 1076.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_font_sizes/font_size = 26
text = "My Other Crazy Quest"

[node name="Panel" type="Panel" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestNameControl"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_shh2r")

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="QuestDescriptionLabel" type="RichTextLabel" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/default_color = Color(0.781407, 0.781407, 0.781407, 1)
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Traveler, I've been waiting for someone like you. The world is being strangled by a shadow few can see, but I know the truth—Ninth Level Industries is behind it all. They’re no ordinary company. Beneath their corporate veil lies a vast machine of corruption, control, and destruction.

They've already devastated the ancient forests, poisoned rivers, and enslaved countless free spirits, turning them into mindless laborers for their sprawling empire. And now they set their sights on the heart of the elven homeland. If they succeed, our lands will become nothing more than a wasteland of metal and smoke.

This isn't just about resources or territory—it’s about breaking free from the chains they’ve placed on the world. Our freedom hangs in the balance.

But we can't strike blindly. Ninth Level Industries is a fortress of secrets, with deadly enforcers, clever traps, and mind-bending technology that defies even the ancient magics. I’ve gathered what little intelligence we have, but we need a hero—someone with your skills—to infiltrate their operations, cripple their supply chains, and take down their leaders.

This won’t be easy. Their headquarters is a labyrinth of steel and glass, guarded by creatures both mechanical and living, and their leader... well, no one has seen the face of the one who pulls the strings, but I've heard whispers of a power that rivals even the ancient gods.

Will you join us in this fight? Together, we can end Ninth Level’s reign before it’s too late. But know this—there is no turning back once we begin."
fit_content = true

[node name="QuestObjectivesControl" type="Control" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="QuestObjectivesLabel" type="Label" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestObjectivesControl"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -11.5
offset_right = 1076.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "Objectives
"

[node name="Panel" type="Panel" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestObjectivesControl"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_shh2r")

[node name="QuestStepsContainer" type="VBoxContainer" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="QuestStepUIEntry" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestStepsContainer" instance=ExtResource("3_21qh0")]
layout_mode = 2
size_flags_horizontal = 0

[node name="QuestStepUIEntry3" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestStepsContainer" instance=ExtResource("3_21qh0")]
layout_mode = 2
size_flags_horizontal = 0

[node name="QuestStepUIEntry2" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestStepsContainer" instance=ExtResource("3_21qh0")]
layout_mode = 2
size_flags_horizontal = 0

[node name="QuestRewardsControl" type="Control" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="QuestObjectivesLabel" type="Label" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardsControl"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -11.5
offset_right = 1076.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "Rewards
"

[node name="Panel" type="Panel" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardsControl"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_shh2r")

[node name="QuestRewardContainer" type="GridContainer" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 10

[node name="ItemRewardElement16" type="PanelContainer" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardContainer/ItemRewardElement16"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardContainer/ItemRewardElement16/MarginContainer"]
layout_mode = 2
texture = ExtResource("4_miqe6")
expand_mode = 1
stretch_mode = 5

[node name="QuantityText" type="Label" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardContainer/ItemRewardElement16/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.847059, 0.847059, 0.847059, 1)
theme_override_colors/font_outline_color = Color(0.113725, 0.113725, 0.113725, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "1"
horizontal_alignment = 2

[node name="ItemRewardElement2" type="PanelContainer" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardContainer/ItemRewardElement2"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardContainer/ItemRewardElement2/MarginContainer"]
layout_mode = 2
texture = ExtResource("5_sqikf")
expand_mode = 1
stretch_mode = 5

[node name="QuantityText" type="Label" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardContainer/ItemRewardElement2/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.847059, 0.847059, 0.847059, 1)
theme_override_colors/font_outline_color = Color(0.113725, 0.113725, 0.113725, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "5"
horizontal_alignment = 2

[node name="ItemRewardElement3" type="PanelContainer" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardContainer/ItemRewardElement3"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardContainer/ItemRewardElement3/MarginContainer"]
layout_mode = 2
texture = ExtResource("6_7e438")
expand_mode = 1
stretch_mode = 5

[node name="QuantityText" type="Label" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardContainer/ItemRewardElement3/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.847059, 0.847059, 0.847059, 1)
theme_override_colors/font_outline_color = Color(0.113725, 0.113725, 0.113725, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "1"
horizontal_alignment = 2

[node name="ItemRewardElement4" type="PanelContainer" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardContainer/ItemRewardElement4"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="TextureRect" type="TextureRect" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardContainer/ItemRewardElement4/MarginContainer"]
layout_mode = 2
texture = ExtResource("7_23sdu")
expand_mode = 1
stretch_mode = 5

[node name="QuantityText" type="Label" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/VBoxContainer/QuestRewardContainer/ItemRewardElement4/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.847059, 0.847059, 0.847059, 1)
theme_override_colors/font_outline_color = Color(0.113725, 0.113725, 0.113725, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "2500"
horizontal_alignment = 2

[node name="QuestButtons" type="HBoxContainer" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="AcceptButton" type="Button" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/QuestButtons"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 8
text = "Accept"

[node name="CompleteButton" type="Button" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/QuestButtons"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 8
text = "Complete"

[node name="TrackButton" type="Button" parent="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/QuestButtons"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
size_flags_horizontal = 8
text = "Track"

[node name="NoQuestSelectedContainer" type="PanelContainer" parent="PanelContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_e7glo")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/HBoxContainer/NoQuestSelectedContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 12

[node name="NoQuestLabel" type="Label" parent="PanelContainer/HBoxContainer/NoQuestSelectedContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 26
text = "No Quest Selected"

[node name="CloseButton" type="Button" parent="PanelContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0kg7u")
theme_override_styles/hover = SubResource("StyleBoxFlat_0kg7u")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pf4kq")
theme_override_styles/normal = SubResource("StyleBoxFlat_kq4wg")
text = "X"

[connection signal="item_selected" from="PanelContainer/HBoxContainer/QuestListContainer/MarginContainer/VBoxContainer/ScrollContainer/QuestListControl" to="." method="_on_quest_list_control_item_selected"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/QuestButtons/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/QuestButtons/CompleteButton" to="." method="_on_complete_button_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/QuestDetailsContainer/MarginContainer/QuestButtons/TrackButton" to="." method="_on_track_button_pressed"]
[connection signal="pressed" from="PanelContainer/CloseButton" to="." method="_on_close_button_pressed"]
